# smart-campus-assistant

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
clients/: thingsboard_client.py
config/: settings.py
src/smart_campus_assistant/agents/: scheduler.py  supervisor.py  telemetry.py
src/smart_campus_assistant/bots/: telegram.py  whisper.py
src/smart_campus_assistant/clients/: thingsboard_client.py
src/smart_campus_assistant/config/: settings.py
src/smart_campus_assistant/graph/: workflow.py
src/smart_campus_assistant/tools/: air_quality.py  diagnostics.py  lights.py  occupancy.py  schedule.py  schemas.py  temp_humidity.py
src/smart_campus_assistant/utils/: device_registry.py  schedule_registry.py
tools/: air_quality.py  lights.py  occupancy.py  thingsboard_api.py
utils/: device_registry.py
